Solima na na na

--- a/GFM/localisation/00_HPM_countries.csv
+++ b/GFM/localisation/00_HPM_countries.csv
@@ -4270,7 +4270,7 @@ BDU;Namandiru;;;;;;;;;;;;;
 BDU_ADJ;Namandiruan;;;;;;;;;;;;;
 BDU_theocracy;Bundu;Bundu;Bundu;;Bundu;;;;;;;;;
 BDU_theocracy_ADJ;Bundunke;Bundunke;Bundunke;;;;;;;;;;;
-SMN;Solimana;;;;;;;;;;;;;
+SMN;Solima;;;;;;;;;;;;;
 SMN_ADJ;Yalunka;;;;;;;;;;;;;
 XSO;Xaaso;;;;;;;;;;;;;
 XSO_ADJ;Xaasongaxango;;;;;;;;;;;;;
