--- a/GFM/localisation/Colonial_country_names.csv
+++ b/GFM/localisation/Colonial_country_names.csv
@@ -502,15 +502,15 @@ DAI_colonial_company_4;Etsunan;;;;;;;;;;;;;
 GUY_colonial_company;Colony of Suriname;;;;;;;;;;;;;
 GUY_colonial_company_2;Guyane Occidentale;;;;;;;;;;;;;
 GUY_colonial_company_4;Surinaamse Kolonie;;;;;;;;;;;;;
-CRB_colonial_company;West Indies Federation;;;;;;;;;;;;;
-CRB_colonial_company_2;Antilles Françaises;;;;;;;;;;;;;
-CRB_colonial_company_3;Karibik;;;;;;;;;;;;;
-CRB_colonial_company_4;Federación de las Indias Occidentales;;;;;;;;;;;;;
-MTQ_colonial_company;West Indies Federation;;;;;;;;;;;;;
+CRB_colonial_company;British Antilles;;;;;;;;;;;;;
+CRB_colonial_company_2;Antilles Anglaises;;;;;;;;;;;;;
+CRB_colonial_company_3;Britische Antillen;;;;;;;;;;;;;
+CRB_colonial_company_4;Antillas Británicas;;;;;;;;;;;;;
+MTQ_colonial_company;French Antilles;;;;;;;;;;;;;
 MTQ_colonial_company_2;Antilles Françaises;;;;;;;;;;;;;
-MTQ_colonial_company_3;Karibik;;;;;;;;;;;;;
-MTQ_colonial_company_4;Federación de las Indias Occidentales;;;;;;;;;;;;;
-NAN_colonial_company_4;Antilliaanse Kolonie;;;;;;;;;;;;;
+MTQ_colonial_company_3;Französische Antillen;;;;;;;;;;;;;
+MTQ_colonial_company_4;Antillas francesas;;;;;;;;;;;;;
+NAN_colonial_company_4;Nederlandse Antillen;;;;;;;;;;;;;
 CUB_colonial_company;Dominion of Cuba;;;;;;;;;;;;;
 CUB_colonial_company_2;Cuba;;;;;;;;;;;;;
 CUB_colonial_company_3;Kuba;;;;;;;;;;;;;
