--- a/GFM/localisation/00_SAF_Misc.csv
+++ b/GFM/localisation/00_SAF_Misc.csv
@@ -242,7 +242,7 @@ ORA_conservative_2;Boeren Party;;;;;;;;;;;;;
 ORA_conservative_3;Orangia Unie;;;;;;;;;;;;;
 ORA_socialist;Volksparty;;;;;;;;;;;;;
 ORA_reactionary;Nasionale Party;;;;;;;;;;;;;
-ORA_radical;Die Radicals;;;;;;;;;;;;;
+ORA_radical;Die Radikale;;;;;;;;;;;;;
 ORA_communist;Kommunistiese Party van Oranje;;;;;;;;;;;;;
 ORA_fascist;Boerstaat Party;;;;;;;;;;;;;
 TRN_liberal;Demokratiese Alliansie;;;;;;;;;;;;;
@@ -251,7 +251,7 @@ TRN_conservative_2;Boeren Party;;;;;;;;;;;;;
 TRN_conservative_3;Het Volk;;;;;;;;;;;;;
 TRN_socialist;Sosialistiese Party van die ZAR;;;;;;;;;;;;;
 TRN_reactionary;Nasionale Party;;;;;;;;;;;;;
-TRN_radical;Die Radicals;;;;;;;;;;;;;
+TRN_radical;Die Radikale;;;;;;;;;;;;;
 TRN_communist;Volksparty se Demokratiese Party;;;;;;;;;;;;;
 TRN_fascist;Nasionale Broederskap van die ZAR;;;;;;;;;;;;;
 NAL_liberal;Liberale Party;;;;;;;;;;;;;
@@ -259,7 +259,7 @@ NAL_conservative;Voortrekker Party;;;;;;;;;;;;;
 NAL_conservative_2;Boeren Party;;;;;;;;;;;;;
 NAL_socialist;Natalia Sosialistiese Party;;;;;;;;;;;;;
 NAL_reactionary;Nasionale Party;;;;;;;;;;;;;
-NAL_radical;Die Radicals;;;;;;;;;;;;;
+NAL_radical;Die Radikale;;;;;;;;;;;;;
 NAL_communist;Werkersparty van Natalia;;;;;;;;;;;;;
 NAL_fascist;Natalse Patriotiese Liga;;;;;;;;;;;;;
 VLK;The South African Republic;;;;;;;;;;;;;
