first big shifting commit

--- a/GFM/localisation/FlavoursMod_decisions.csv
+++ b/GFM/localisation/FlavoursMod_decisions.csv
@@ -34,7 +34,7 @@ annex_united_baltic_duchy_desc;§RGain 4 infamy§! The time has come to incorporat
 ober_ost_title;Ober Ost Litauen;;;;;;;;;;;;;
 ober_ost_desc;§RGain 1 infamy§! In our military successes against the Russians in the east, many more eastern lands are now under our rule, while the local German Nobility can be left in charge of Estonia and Latvia, Lithuania will require a much more direct method of control. Ober Ost, 'Supreme Command of All German Forces in the East', will be assigned to the region to both pacify the native population and civilize them with German ideals and culture.;;;;;;;;;;;;;
 demand_russian_latvia_title;Demand Russian Latvia;;;;;;;;;;;;;
-demand_russian_latvia_desc;Although we have successfully taken control of the Baltics from the Russians, there are still some disputed lands in Latvia which have not yet been seceded to us after the Russian defeat. Whilst the Russians are still licking their wounds, we must demand for the complete transfer of the Baltics!;;;;;;;;;;;;;
+demand_russian_latvia_desc;Although we have successfully taken control of the Baltics from the Russians, there are still some disputed lands in Latvia which have not yet been ceded to us after the Russian defeat. Whilst the Russians are still licking their wounds, we must demand for the complete transfer of the Baltics!;;;;;;;;;;;;;
 kpm_shipping_title;Establish the Koninklijke Paketvaart Maatschappij;;;;;;;;;;;;;
 kpm_shipping_desc;The Koninklijke Paketvaart Maatschappij (KPM) was founded by the Dutch to operate a regional shipping line in the Indonesian Archipelago. It was the dominant inter-island shipping line in Indonesia during the last half century of the colonial era. KPM maintained connections between the islands of Indonesia, and supported the unification of the Dutch colony economy as the Netherlands expanded its territory across the Indonesian archipelago.;;;;;;;;;;;;;
 notre_dame_afrique_title;Build the Notre Dame d'Afrique;;;;;;;;;;;;;
@@ -455,7 +455,7 @@ begin_austro_prussian_war_desc;Since the creation of the German Confederation in
 prussian_italian_alliance_title;Propose the Prussian-Italian Alliance;;;;;;;;;;;;;
 prussian_italian_alliance_desc;In order to divide Austrian military strength onto two fronts, we should propose an alliance with the Kingdom of Italy to launch their own separate attack on Austria, in return for the region of Venetia.;;;;;;;;;;;;;
 prussian_italian_alliance_claim_udine_title;Treaty of Vienna ($YEAR$);;;;;;;;;;;;;
-prussian_italian_alliance_claim_udine_desc;Under the Treaty of Vienna, the region of Venetia has been seceded to us.;;;;;;;;;;;;;
+prussian_italian_alliance_claim_udine_desc;Under the Treaty of Vienna, the region of Venetia has been ceded to us.;;;;;;;;;;;;;
 duchy_of_lorraine_title;Create the Duchy of Lorraine;;;;;;;;;;;;;
 duchy_of_lorraine_desc;§RGain 8 infamy§! As we consolidate our rule over the Franche-Comte region, $COUNTRY_ADJ$ settlers have begun to populate the region. To give some legitimacy to our settlement of the region, military rule of the region will come to an end and the Duchy of Lorraine should be restored and incorporated as an administrative region of $COUNTRY$.;;;;;;;;;;;;;
 proclamation_of_islaz_title;The Proclamation of Islaz;;;;;;;;;;;;;
