--- a/GFM/localisation/0000Sitka.csv
+++ b/GFM/localisation/0000Sitka.csv
@@ -258,8 +258,8 @@ outside_italia_irredenta_ITS_title;Italia Irredenta;;;;;;;;;;;;;
 outside_italia_irredenta_ITA_desc;We can now claim more land for our Italian puppet.;;;;;;;;;;;;;
 craftsmen_fix_desc;Fix the craftsmen and bureaucrat bugs. The craftsmen bug is when you have a province that has craftsmen of a non-accepted culture and none of an accepted culture. It forces all promoting pops to become the culture of the craftsmen. The bureaucrats bug is even more annoying: bureaucrats of a non-accepted culture get payed by your government but don't add to administration efficiency, meaning that if that you're just throwing away money.;;;;;;;;;;;;;
 craftsmen_fix_title;Craftsmen & Bureaucrats bug fix;;;;;;;;;;;;;
-incorporate_louisianna_title;Incorporate Louisianna;;;;;;;;;;;;;
-incorporate_louisianna_desc;Now that we have freed Louisianna from the Americans, we can incorporate it into our empire.;;;;;;;;;;;;;
+incorporate_louisiana_title;Incorporate Louisiana;;;;;;;;;;;;;
+incorporate_louisiana_desc;§RGain 5 infamy§! Now that we have freed Louisiana from the Americans, we can incorporate it into our nation. The disastrous effects of its loss, first to the filthy French, then to the vile Americans, shall finally be reversed. We will certainly settle, develop and improve Louisiana more so than any power that has previously controlled.;;;;;;;;;;;;;
 you_arent_going_to_the_uk;UK Immigrant Debuff;;;;;;;;;;;;;
 you_arent_going_to_the_uk_desc;This is an immigration debuffer to make the UK not get unrealistic immigration.;;;;;;;;;;;;;
 you_are_going_to_the_usa;US Immigrant Boost;;;;;;;;;;;;;
@@ -753,8 +753,6 @@ a_greater_german_destiny_title;A Greater German Destiny?;;;;;;;;;;;;;
 a_greater_german_destiny_desc;Germany has long been split between petty fiefdoms, duchies and kingdoms. We must take the initiative to finally unify it.;;;;;;;;;;;;;
 organic_instruction_law_title;The Organic Instruction Law;;;;;;;;;;;;;
 organic_instruction_law_desc;The Organic Instruction Law is a new act proposed by our current $MONARCHTITLE$, Benito Juarez, which looks to improve education throughout the nation with a specific focus in Oaxaca, where the lack of education has been keeping the region stagnant for a long time.;;;;;;;;;;;;;
-juarez_education_modifier;Public Instruction Laws;;;;;;;;;;;;;
-juarez_education_modifier_desc;Having an improved network of Public Instruction Centers is giving our nation a massive boost in general education, but this system will only be this effective as a starting point for the Mexican education.;;;;;;;;;;;;;
 northern_ejido_system;The Northern Ejido System;;;;;;;;;;;;;
 PUCKLOC;Puck was the first successful humor magazine in the United States of colorful cartoons, caricatures and political satire of the issues of the day. It was founded in 1871 as a German-language publication by Joseph Keppler, an Austrian-born cartoonist. Puck's first English-language edition was published in 1877, covering issues like New York City's Tammany Hall, presidential politics, and social issues of the late 19th century to the early 20th century.;;;;;;;;;;;;;
 the_royal_agrarian_reform_title;The Royal Agrarian Reform;;;;;;;;;;;;;
