--- a/GFM/localisation/00_HPM_modifiers.csv
+++ b/GFM/localisation/00_HPM_modifiers.csv
@@ -31,6 +31,8 @@ factories_nationalized;Nationalized Factories;;;;;;;;;;;;;
 factories_nationalized_desc;Our factories in another country were nationalized. This is a blow to the prestige of our country.;;;;;;;;;;;;;
 santa_ana_rule;Antonio López de Santa Anna;;;;;;;;;;;;;
 santa_ana_rule_desc;Antonio de Padua María Severino López de Santa Anna y Pérez de Lebrón - also known as Santa Anna - is the current ruler of Mexico. A hero of the war of independence, his shifting political views and actions have made him an enigmatic figure.;;;;;;;;;;;;;
+santa_ana_in_exile;Santa Anna in Exile;;;;;;;;;;;;;
+santa_ana_in_exile_desc;Antonio López de Santa Anna has fled the country to escape being judged for his crimes and failures. While he is currently unwelcome for obvious reasons, it would still be naive to think that this is the last we will see of him. He spends his days brooding ways to return to power, not letting his Cuban exile confine his ambitions.;;;;;;;;;;;;;
 resistance_to_new_regime;Resistance to the New Regime;;;;;;;;;;;;;
 resistance_to_new_regime_desc;The Japanese people are stuck in a mindset of the past, accustomed to a disunited government and not thinking of themselves as people of a single country. They are voicing unrest at this sudden change in our national politics.;;;;;;;;;;;;;
 zaibatsu_dominance;Zaibatsu Dominance;;;;;;;;;;;;;
