bugs of the week

--- a/GFM/localisation/text.csv
+++ b/GFM/localisation/text.csv
@@ -8343,6 +8343,7 @@ jefferson_method_l;Jefferson Method;Méthode de Jefferson;Jefferson-Methode;;Méto
 proportional_representation_l;Proportional Representation;Représentation proportionnelle;Proportionale Repräsentation;;Representación proporcional;;;;;;;;;
 yes_meeting_l;Allow Public Meetings;Autoriser les réunions publiques;Öffentliche Versammlungen gestatten;;Reuniones públicas permitidas;;;;;;;;;
 no_meeting_l;Outlaw Public Meetings;Interdire les réunions publiques;Öffentliche Versammlungen ächten;;Reuniones públicas prohibidas;;;;;;;;;
+restricted_meeting_l;Regulate Public Meetings;Interdire les réunions publiques;Öffentliche Versammlungen ächten;;Reuniones públicas prohibidas;;;;;;;;;
 state_press_l;State Press Only;Presse d'État uniquement;Nur Staatspresse;;Solo prensa estatal;;;;;;;;;
 censored_press_l;Censored Press;Presse censurée;Pressezensur;;Prensa censurada;;;;;;;;;
 free_press_l;Free Press;Presse libre;Freie Presse;;Prensa libre;;;;;;;;;
