--- a/GFM/localisation/more localisation.csv
+++ b/GFM/localisation/more localisation.csv
@@ -38,6 +38,8 @@ mexico_caribbean_title;Protector of the Hispanic Caribbean;;;;;;;;;;;;;
 mexico_caribbean_desc;§RGain 7 infamy if you don't own Cuba and Hispaniola, 2 infamy if you do§! As $COUNTRY$ is now a world player, we can extend our influence into the Spanish West Indies.;;;;;;;;;;;;;
 mexico_central_america_title;Restore Mexican Rule Over Central America;;;;;;;;;;;;;
 mexico_central_america_desc;§RGain 3 infamy if you already conquered Central America, 8 infamy if you haven't§! Several years ago, Central America used to be under the rule of the First Mexican Empire, but now all that remains are small bickering states. The time has come to restore order to Central America.;;;;;;;;;;;;;
+mexico_caribbean;Claimed the Caribbean;;;;;;;;;;;;;
+mexico_central_america;Claimed Central America;;;;;;;;;;;;;
 EVTDESC56278;With the defeat an inevitability, the Confederate government has fled to the island of Cuba. Some are arguing the Union should make pursuit and invade the island. Others saying it is necessary to take advantage of the peace to end the bloodshed and rebuild the States.;;;;;;;;;;;;;
 csa_flee_cub_title;Evacuate to Havana;;;;;;;;;;;;;
 csa_flee_cub_desc;The war is lost! The gentlemen of the Southern States must flee to Cuba so that we might live to fight another day. Hopefully the Union will stop their aggression at the sea although we cannot be certain they will not pursue us.;;;;;;;;;;;;;
