war name for urrea

--- a/GFM/localisation/000_HPM_Misc.csv
+++ b/GFM/localisation/000_HPM_Misc.csv
@@ -121,6 +121,8 @@ AGRESSION_WAR_CONQUEST_NAME_MEX_MEE;The Rebellion of Vicente Guerrero;;;;;;;;;;;
 NORMAL_WAR_CONQUEST_NAME_MEX_MEE;The Rebellion of Vicente Guerrero;;;;;;;;;;;;;
 AGRESSION_CIVIL_WAR_NAME_MEX_MEE;The Reform War;;;;;;;;;;;;;
 NORMAL_CIVIL_WAR_NAME_MEX_MEE;The Reform War;;;;;;;;;;;;;
+AGRESSION_WAR_CONQUEST_ANY_NAME_MEE_MEX;The Rebellion in northwestern Mexico;;;;;;;;;;;;;
+NORMAL_WAR_CONQUEST_ANY_NAME_MEE_MEX;The Rebellion in northwestern Mexico;;;;;;;;;;;;;
 AGRESSION_WAR_CONQUEST_ANY_NAME_PER_KHR;Revolt of Hasan Khan Salar;;;;;;;;;;;;;
 NORMAL_WAR_CONQUEST_ANY_NAME_PER_KHR;Revolt of Hasan Khan Salar;;;;;;;;;;;;;
 AGRESSION_WAR_NAME_REPARATIONS_FRA_MEX;The Pastry War;;;;;;;;;;;;;
