to the next tester I wish you luck

--- a/GFM/localisation/0000_IranRework.csv
+++ b/GFM/localisation/0000_IranRework.csv
@@ -55,19 +55,26 @@ DUB;Emirate of Dubai;;;;;;;;;;;;;
 DUB_ADJ;Dubai;;;;;;;;;;;;;
 BZD_colonial_company;Bayazid;;;;;;;;;;;;;
 BZD_colonial_company_ADJ;Bayazidi;;;;;;;;;;;;;
-KLS;Hsiao-tao Hui;;;;;;;;;;;;;
-KLS_ADJ;Society;;;;;;;;;;;;;
+KLS;Gansu;;;;;;;;;;;;;
+KLS_ADJ;Hui;;;;;;;;;;;;;
+KLS_absolute_monarchy;Hui;;;;;;;;;;;;;
+KLS_hms_government;Hui;;;;;;;;;;;;;
+KLS_prussian_constitutionalism;Hui;;;;;;;;;;;;;
+KLS_theocracy;Zhiodo Canshir;;;;;;;;;;;;;
+KLS_colonial_company_2;Shaan-Gan Zongdu;;;;;;;;;;;;;
 KLS_colonial_company;Kilis;;;;;;;;;;;;;
 KLS_colonial_company_ADJ;Kilisi;;;;;;;;;;;;;
-KLS_absolute_monarchy;Xiao Dao Hui;;;;;;;;;;;;;
-KLS_hms_government;The Small Knife Society;;;;;;;;;;;;;
-KLS_prussian_constitutionalism;The Small Knife Society;;;;;;;;;;;;;
-KLS_fascist_dictatorship;Tsiao Dao Hui;;;;;;;;;;;;;
-KLS_proletarian_dictatorship;Shanghai Commune;;;;;;;;;;;;;
-KLS_proletarian_dictatorship_ADJ;Shanghainese;;;;;;;;;;;;;
-KLS_democracy;Shanghai Republic;;;;;;;;;;;;;
-KLS_democracy_ADJ;Shanghainese;;;;;;;;;;;;;
-KLS_presidential_dictatorship;Heavenly Republic of Shanghai;;;;;;;;;;;;;
+DAO;Hsiao-tao Hui;;;;;;;;;;;;;
+DAO_ADJ;Society;;;;;;;;;;;;;
+DAO_absolute_monarchy;Xiao Dao Hui;;;;;;;;;;;;;
+DAO_hms_government;The Small Knife Society;;;;;;;;;;;;;
+DAO_prussian_constitutionalism;The Small Knife Society;;;;;;;;;;;;;
+DAO_fascist_dictatorship;Tsiao Dao Hui;;;;;;;;;;;;;
+DAO_proletarian_dictatorship;Shanghai Commune;;;;;;;;;;;;;
+DAO_proletarian_dictatorship_ADJ;Shanghainese;;;;;;;;;;;;;
+DAO_democracy;Shanghai Republic;;;;;;;;;;;;;
+DAO_democracy_ADJ;Shanghainese;;;;;;;;;;;;;
+DAO_presidential_dictatorship;Heavenly Republic of Shanghai;;;;;;;;;;;;;
 KHL_colonial_company;Khalidi;;;;;;;;;;;;;
 KHL_colonial_company_ADJ;Khalidi;;;;;;;;;;;;;
 TSI_colonial_company;Tasini;;;;;;;;;;;;;
