--- a/GFM/localisation/00_HPM_countries.csv
+++ b/GFM/localisation/00_HPM_countries.csv
@@ -2543,9 +2543,18 @@ WHA_radical;Anarchwyr;;;;;;;;;;;;;
 WHA_fascist;Meibion Glyndwr;;;;;;;;;;;;;
 WHA_communist;Plaid Gomiwnyddol;;;;;;;;;;;;;
 WHA_reactionary;Plaid Genedlaethol;;;;;;;;;;;;;
+XBI;Qinghai;;;;;;;;;;;;;
 XBI_ADJ;Qinghai;;;;;;;;;;;;;
-XBI_presidential_dictatorship;Ma Clique;;;;;;;;;;;;;
-XBI_presidential_dictatorship_ADJ;Hui;;;;;;;;;;;;;
+XBI_presidential_dictatorship;Xikang Clique;;;;;;;;;;;;;
+XBI_presidential_dictatorship_ADJ;Xikangi;;;;;;;;;;;;;
+XBI_absolute_monarchy;Nangchen;;;;;;;;;;;;;
+XBI_absolute_monarchy_ADJ;Nangqian;;;;;;;;;;;;;
+XBI_prussian_constitutionalism;Nangchen;;;;;;;;;;;;;
+XBI_prussian_constitutionalism_ADJ;Nangqian;;;;;;;;;;;;;
+XBI_hms_government;Nangchen;;;;;;;;;;;;;
+XBI_hms_government_ADJ;Nangqian;;;;;;;;;;;;;
+KLS_presidential_dictatorship;Ma Clique;;;;;;;;;;;;;
+KLS_presidential_dictatorship_ADJ;Hui;;;;;;;;;;;;;
 XBI_reactionary_2;Amban's Faction;;;;;;;;;;;;;
 XBI_conservative_2;Confucianist Faction;;;;;;;;;;;;;
 XBI_liberal_2;Reformer Faction;;;;;;;;;;;;;
