--- a/GFM/localisation/00_HPM_map.csv
+++ b/GFM/localisation/00_HPM_map.csv
@@ -1496,3 +1496,4 @@ PROV4154;Kyakyaru;;;;;;;;;;;;;
 PROV4155;Gartok;;;;;;;;;;;;;
 PROV4156;Jammu;;;;;;;;;;;;;
 PROV4157;Kullu;;;;;;;;;;;;;
+PROV4158;Nangchen;;;;;;;;;;;;;
