reducing soldiers in USA and MEX

--- a/GFM/localisation/text.csv
+++ b/GFM/localisation/text.csv
@@ -10807,7 +10807,7 @@ PROV2774;Gulf of Varna;Golfe de Varna;Golf von Varna;;Golfo de Varna;;;;;;;;;
 PROV2775;Gulf of Odessa;Golfe d'Odessa;Golf von Odessa;;Golfo de Odessa;;;;;;;;;
 PROV2776;Sea of Azov;Mer d'Azov;Asowsches Meer;;Mar de Azov;;;;;;;;;
 PROV2777;Eastern Black Sea;Mer Noire orientale;Östliches Schwarzmeer;;Mar Negro oriental;;;;;;;;;
-PROV2778;Lake Balaton;Lac Balaton;Balaton-See;;Lago Balatón;;;;;;;;;
+PROV2778;Plattensee;Lac Balaton;Balaton-See;;Lago Balatón;;;;;;;;;
 PROV2779;Caspian Sea;Mer Caspienne;Kaspisches Meer;;Mar Caspio;;;;;;;;;
 PROV2780;Aral Sea;Mer d'Aral;Aralsee;;Mar de Aral;;;;;;;;;
 PROV2781;Gulf of Suez;Golfe de Suez;Golf von Suez;;Golfo de Suez;;;;;;;;;
