chaos content for sikh and dogra to kill LAD

--- a/GFM/localisation/000_HPM_Misc.csv
+++ b/GFM/localisation/000_HPM_Misc.csv
@@ -2933,3 +2933,12 @@ GREATWADKALTABUONE;\n\nThe $FROMCOUNTRY_ADJ$ have accepted sending an expedition
 GREATWADKALTABUTWO;\n\nThe $FROMCOUNTRY_ADJ$ have rejected sending an expeditionary force to Abyssinia to pacify the region.;;;;;;;;;;;;;
 colonize_inner_tibet_title;Conquer the Tibetan Plateau;;;;;;;;;;;;;
 colonize_inner_tibet_desc;The Tibetan Plateau is inhabited by various Tibetan peoples, most of them not sedentary, and has been for millenia. With the westernization of our bureaucracy and army, we are now able to control them.;;;;;;;;;;;;;
+BRANDNEWWHAT;\n\nThe British have unilaterally decided to sell Kashmir from us to Jammu, ending our control in the region.;;;;;;;;;;;;;
+buy_kashmir_eng_title;Become a British Princely State;;;;;;;;;;;;;
+buy_kashmir_eng_desc;Our days as a fully-independent nation are numbered. With the British at our doorstep and our enemies defeated, we might wanna offer something to the British they can't deny - becoming their ally in the region as a princely state, in exchange of control over Kashmir, now under their control.;;;;;;;;;;;;;
+ladakhchaos_title;Establish a Puppet State in Ladakh;;;;;;;;;;;;;
+ladakhchaos_desc;§RGain 2 infamy§! To keep expanding our domains to the North, we must bring Ladakh under our control and claim it as part of our great state.;;;;;;;;;;;;;
+ladakh_larp_title;Claim Western Tibet;;;;;;;;;;;;;
+ladakh_larp_desc;§RGain 5 infamy§! As the rightful claimants to Ladakh, we must bring under our control the lands they lost to Tibet in the XVII-XVIII centuries and bring our country to control both sides of the Himalayas!;;;;;;;;;;;;;
+dogra_out_now_title;Claim Jammu and Ladakh;;;;;;;;;;;;;
+dogra_out_now_desc;§RGain 5 infamy§! The Sikh Empire had for decades ruled Jammu, but a rogue governor took Jammu for himself in the early 1820s, and the territory was lost. Today we're back in a position to establish lasting control over Jammu and its surrounding territoris once and for all.;;;;;;;;;;;;;
