--- a/GFM/localisation/000_HPM_Misc.csv
+++ b/GFM/localisation/000_HPM_Misc.csv
@@ -423,7 +423,7 @@ EVTNAME16121912;The Inauguration of the Thames Tunnel;;;;;;;;;;;;;
 EVTDESC16121912;The Thames Tunnel was the first tunnel to have been constructed successfully underneath a navigable river, connecting Rotherhithe to Wapping underneath the Thames River. It was inaugurated in 1843, and can be used to represent the Industrial Revolution and innovations made in the 19th century in England, as the design and the tunneling shelf used were newly invented.;;;;;;;;;;;;;
 USS_claim_ANT_title;Claim the Antilles;;;;;;;;;;;;;
 USS_claim_ANT_desc;The Antilles were discovered by our Latin brothers, and the English and French forced us to give the isles to them to use African slaves there to exploit sugar cane. With some of the islands having Latins waiting for them to be liberated and the Miranda Doctrine, we can claim the Antilles.;;;;;;;;;;;;;
-PROV3545;Lake Khanka;;;;;;;;;;;;;
+PROV3545;Lake Hinkai;;;;;;;;;;;;;
 PROV3546;Lake Taihu;;;;;;;;;;;;;
 PROV3547;Tonlé Sap;;;;;;;;;;;;;
 PROV3548;Lake Qilin;;;;;;;;;;;;;
