more lake renames (sue me) + positions in MEX

--- a/GFM/localisation/text.csv
+++ b/GFM/localisation/text.csv
@@ -9324,7 +9324,7 @@ PROV887;Erzurum;Erzurum;Erzurum;;Erzurum;;;;;;;;;
 PROV888;Erzincan;Erzincan;Erzincan;;Erzincan;;;;;;;;;
 PROV889;Malatya;Malatya;Malatya;;Malatya;;;;;;;;;
 PROV890;Van;Van;Van;;Van;;;;;;;;;
-PROV891;Bitlis;Bitlis;Bitlis;;Bitlis;;;;;;;;;
+PROV891;Bidlîs;Bitlis;Bitlis;;Bitlis;;;;;;;;;
 PROV893;Diyarbakir;Diyarbakir;Diyarbakir;;Diyarbakir;;;;;;;;;
 PROV894;Adna;Adna;Adna;;Adna;;;;;;;;;
 PROV895;Silifke;Silifke;Silifke;;Silifke;;;;;;;;;
@@ -11229,7 +11229,7 @@ PROV3227;Great Slave Lake;Grand lac des esclaves;Großer Sklavensee;;Gran Lago de
 PROV3228;Lake Athabasca;Lac Athabasca;Athabascasee;;Lago Athabasca;;;;;;;;;
 PROV3229;Reindeer Lake;Lac Reindeer;Reindeersee;;Lago Reindeer;;;;;;;;;
 PROV3230;Gulf of Ob;Golfe d'Ob;Golf von Ob;;Golfo de Ob;;;;;;;;;
-PROV3231;Lake Van;Lac Van;Van-See;;Lago Van;;;;;;;;;
+PROV3231;Gola Wanê;Lac Van;Van-See;;Lago Van;;;;;;;;;
 PROV3232;Lake Urmia;Lac Urmia;Urmiasee;;Lago Urmia;;;;;;;;;
 PROV3233;Issyk Kul;Issyk Kul;Issyk Kul;;Issyk Kul;;;;;;;;;
 PROV3234;Tsinghai Lake;Lac Tsinghai;Tsinghai-See;;Lago Tsinghai;;;;;;;;;
