--- a/GFM/localisation/00_HPM_events.csv
+++ b/GFM/localisation/00_HPM_events.csv
@@ -889,7 +889,7 @@ EVT90909OPTA;We don't want to anger our $FROMCOUNTRY_ADJ$ friends, do we?;;;;;;;
 EVT90909OPTB;They will have to take it from our cold, dead hands.;;;;;;;;;;;;;
 EVTNAME70002;$FROMCOUNTRY$ Goes Bankrupt!;;;;;;;;;;;;;
 EVTDESC70002;Wave after wave of selling again moved down prices on the Stock Exchange today and billions of pounds were clipped from values. Traders surged about brokerage offices watching their holdings wiped out.... It was one of the worst breaks in history.... For a time, in the morning, the market was showing signs of rallying power.... Then new waves of selling out of poorly margined accounts started another reaction...\n\n$FROMCOUNTRY$ has gone bankrupt and defaulted on all their debts. We must use our military might if we want to safeguard our investors.;;;;;;;;;;;;;
-EVTOPTA70002;The $FROMCOUNTRY_ADJ$ better pay their debts.;;;;;;;;;;;;;
+EVTOPTA70002;$FROMCOUNTRY$ had better pay its debts.;;;;;;;;;;;;;
 EVTNAME70003;$FROMCOUNTRY$ Defaults in Defiance of our Military!;;;;;;;;;;;;;
 EVTDESC70003;I pledge you, I pledge myself to a new deal for the $FROMCOUNTRY_ADJ$ people. Let us here assembled constitute ourselves prophets of a new order of competence and courage. This is more than a political campaign, it is a call to arms...\n\nA spokesperson of the $COUNTRY_ADJ$ government was quoted saying as the matter of the $FROMCOUNTRY_ADJ$ debt exploded in the press. They went bankrupt again, defying previous treaties and now there's talk of military intervention to make sure we will get paid.;;;;;;;;;;;;;
 EVTOPTA70003;We are ready to move from the conference to the battlefield table.;;;;;;;;;;;;;
