--- a/GFM/localisation/000_HPM_Misc.csv
+++ b/GFM/localisation/000_HPM_Misc.csv
@@ -308,6 +308,8 @@ AGRESSION_WAR_PUPPET_NAME_ENG_GWA;The Gwalior Campaign;;;;;;;;;;;;;
 NORMAL_WAR_PUPPET_NAME_ENG_GWA;The Gwalior Campaign;;;;;;;;;;;;;
 AGRESSION_WAR_PUPPET_NAME_RUS_BKY;The Rebellion of Isatay Taimanov;;;;;;;;;;;;;
 NORMAL_WAR_PUPPET_NAME_RUS_BKY;The Rebellion of Isatay Taimanov;;;;;;;;;;;;;
+AGRESSION_WAR_PUPPET_NAME_ENG_ZUL;The Anglo-Zulu War;;;;;;;;;;;;;
+NORMAL_WAR_PUPPET_NAME_ENG_ZUL;The Anglo-Zulu War;;;;;;;;;;;;;
 AGRESSION_WAR_RELEASE_PUPPET_NAME_JAP_CHO;The $ORDER$Choshu Expedition;;;;;;;;;;;;;
 NORMAL_WAR_RELEASE_PUPPET_NAME_JAP_CHO;The $ORDER$Choshu Expedition;;;;;;;;;;;;;
 AGRESSION_WAR_RELEASE_PUPPET_NAME_PEU_PBC;The Peruvian Revolt;;;;;;;;;;;;;
