Kenesary Rebellion finish/Russian renames

--- a/GFM/localisation/darkness.csv
+++ b/GFM/localisation/darkness.csv
@@ -192,8 +192,9 @@ AFG_1217;Eastern Afghanistan;Eastern Afghanistan;Ost-Afghanistan;;Eastern Afghan
 RUS_1196;Turkmenia;Turkmenia;Turkmenistan;;Turkmenia;;;;;;;;;
 KHI_1191;Uzbekia;Uzbekia;Uzbekia;;Uzbekia;;;;;;;;;
 BUK_1207;Tajikistan;Tajikistan;Tadschikistan;;Tajikistan;;;;;;;;;
-RUS_1182;Uralsk;Uralsk;Oral;;Uralsk;;;;;;;;;
-RUS_1184;Akmolinsk;Akmolinsk;Akmolinsk;;Akmolinsk;;;;;;;;;
+RUS_1182;Alimuly;Uralsk;Oral;;Uralsk;;;;;;;;;
+RUS_1184;Kypshak;Akmolinsk;Akmolinsk;;Akmolinsk;;;;;;;;;
+RUS_1187;Argyn;Akmolinsk;Akmolinsk;;Akmolinsk;;;;;;;;;
 CHI_1581;Chungking;Chungking;Chungking;;Chungking;;;;;;;;;
 CHI_1494;Shaozhou;Shaozhou;Shaozhou;;Shaozhou;;;;;;;;;
 CHI_1611;Chekiang;Chekiang;Chekiang;;Chekiang;;;;;;;;;
