Revert "Kenesary Rebellion finish/Russian renames"
This reverts commit 42acbd7c8e38a9194f8a1a48939c2b8c77bec588.

--- a/GFM/localisation/00_HPM_map.csv
+++ b/GFM/localisation/00_HPM_map.csv
@@ -512,7 +512,7 @@ PROV965;Kakhovka;;;;;;;;;;;;;
 PROV1048;Yekaterinodar;;;;;;;;;;;;;
 PROV1045;Migulinskaya;;;;;;;;;;;;;
 PROV950;Ungwar;;;;;;;;;;;;;
-RUS_1185;Dulat;;;;;;;;;;;;;
+RUS_1185;Zhetysu;;;;;;;;;;;;;
 RUS_2618;Kamchatka;;;;;;;;;;;;;
 RUS_2621;Kolyma;;;;;;;;;;;;;
 RUS_2590;Chukotka;;;;;;;;;;;;;
