Kenesary/Russian Renames (again)

--- a/GFM/localisation/00_HPM_countries.csv
+++ b/GFM/localisation/00_HPM_countries.csv
@@ -1310,6 +1310,9 @@ BUK_absolute_monarchy;Emirate of Bukhara;;;;;;;;;;;;;
 KOK_absolute_monarchy;Khanate of Kokand;;;;;;;;;;;;;
 KAZ;Kazakhstan;;;;;;;;;;;;;
 KAZ_ADJ;Kazakh;;;;;;;;;;;;;
+KAZ_absolute_monarchy_ADJ;Middle Kazakh;;;;;;;;;;;;;
+KAZ_semi_constitutional_monarchy_ADJ;Middle Kazakh;;;;;;;;;;;;;
+KAZ_constitutional_monarchy_ADJ;Middle Kazakh;;;;;;;;;;;;;
 KAZ_liberal;The Liberals;Faction libérale;Die liberale Fraktion;;;;;;;;;;;
 KAZ_reactionary;The Khanate Faction;Faction nationaliste;Die nationalistische Fraktion;;;;;;;;;;;
 KAZ_radical;The Libertains;Faction radicale;Die radikale Fraktion;;;;;;;;;;;
