--- a/GFM/localisation/text.csv
+++ b/GFM/localisation/text.csv
@@ -9540,7 +9540,7 @@ PROV1180;Taizz;Taizz;Taizz;;Taizz;;;;;;;;;
 PROV1182;Guryev;Guryev;Guryev;;Gureiev;;;;;;;;;
 PROV1183;Aqtobe;Aqtobe;Aqtobe;;Aqtobe;;;;;;;;;
 PROV1184;Semipalatinsk;Kokshetau;Kokshetau;;Kokshetau;;;;;;;;;
-PROV1187;Ayaguz;Semipalatinsk;Semipalatinsk;;Semipalátinsk;;;;;;;;;
+PROV1187;Ayagoz;Semipalatinsk;Semipalatinsk;;Semipalátinsk;;;;;;;;;
 PROV1209;Kabul;Kabul;Kabul;;Kabul;;;;;;;;;
 PROV1212;Herat;Herat;Herat;;Herât;;;;;;;;;
 PROV1213;Bamyan;Bamyan;Bamyan;;Bamyan;;;;;;;;;
