--- a/GFM/localisation/0000Trigori_text.csv
+++ b/GFM/localisation/0000Trigori_text.csv
@@ -480,7 +480,13 @@ KAZ_constitutional_empire;The Kazakh Khanate;;;;;;;;;;;;;
 KAZ_absolute_empire_ADJ;Kazakh;;;;;;;;;;;;;
 KAZ_semi_constitutional_empire_ADJ;Kazakh;;;;;;;;;;;;;
 KAZ_constitutional_empire_ADJ;Kazakh;;;;;;;;;;;;;
-KAZ_conservative;Borjigin-Tore;;;;;;;;;;;;;
+BKY_absolute_monarchy;Junior Jüz;;;;;;;;;;;;;
+BKY_semi_constitutional_monarchy;Junior Jüz;;;;;;;;;;;;;
+BKY_constitutional_monarchy;Junior Jüz;;;;;;;;;;;;;
+BKY_absolute_monarchy_ADJ;Junior Kazakh;;;;;;;;;;;;;
+BKY_semi_constitutional_monarchy_ADJ;Junior Kazakh;;;;;;;;;;;;;
+BKY_constitutional_monarchy_ADJ;Junior Kazakh;;;;;;;;;;;;;
+BKY_conservative;Borjigin-Tore;;;;;;;;;;;;;
 KAZ_liberal;Taraqqiparvarlar;Faction libérale;Die liberale Fraktion;;;;;;;;;;;
 KAZ_liberal_2;Alash Partiasy;Faction libérale;Die liberale Fraktion;;;;;;;;;;;
 KAZ_reactionary;Qadimlar;Faction nationaliste;Die nationalistische Fraktion;;;;;;;;;;;
