--- a/GFM/localisation/0000Trigori_text.csv
+++ b/GFM/localisation/0000Trigori_text.csv
@@ -480,6 +480,7 @@ KAZ_constitutional_empire;The Kazakh Khanate;;;;;;;;;;;;;
 KAZ_absolute_empire_ADJ;Kazakh;;;;;;;;;;;;;
 KAZ_semi_constitutional_empire_ADJ;Kazakh;;;;;;;;;;;;;
 KAZ_constitutional_empire_ADJ;Kazakh;;;;;;;;;;;;;
+KAZ_conservative;Borjigin-Tore;;;;;;;;;;;;;
 BKY_absolute_monarchy;Junior Jüz;;;;;;;;;;;;;
 BKY_semi_constitutional_monarchy;Junior Jüz;;;;;;;;;;;;;
 BKY_constitutional_monarchy;Junior Jüz;;;;;;;;;;;;;
