--- a/GFM/localisation/00_HPM_countries.csv
+++ b/GFM/localisation/00_HPM_countries.csv
@@ -3910,8 +3910,8 @@ MZR_constitutional_empire;Mazrui;;;;;;;;;;;;;
 MZR_constitutional_empire_ADJ;Mazrui;;;;;;;;;;;;;
 MZR_semi_constitutional_empire;Mazrui;;;;;;;;;;;;;
 MZR_semi_constitutional_empire_ADJ;Mazrui;;;;;;;;;;;;;
-BKY;Ujiji;;;;;;;;;;;;;
-BKY_ADJ;Ujiji;;;;;;;;;;;;;
+BKY;West Kazakhstan;;;;;;;;;;;;;
+BKY_ADJ;Kazakh;;;;;;;;;;;;;
 BKY_absolute_empire;Bukey Horde;;;;;;;;;;;;;
 BKY_absolute_empire_ADJ;Kazakh;;;;;;;;;;;;;
 BKY_constitutional_empire;Bukey Horde;;;;;;;;;;;;;
@@ -4324,7 +4324,7 @@ CRW;Crow;;;;;;;;;;;;;
 CRW_ADJ;Apsáalooke;;;;;;;;;;;;;
 PAW;Pawnee;;;;;;;;;;;;;
 PAW_ADJ;Chatiks;;;;;;;;;;;;;
-KSJ;South Kazakhstan;;;;;;;;;;;;;
+KSJ;East Kazakhstan;;;;;;;;;;;;;
 KSJ_absolute_monarchy;Senior Jüz;;;;;;;;;;;;;
 KSJ_ADJ;Senior Kazakh;;;;;;;;;;;;;
 KAZ_proletarian_dictatorship;SSR Kazakhstan;RSS Kazakhstan;SSR Kasachstan;SSR Kazachstan;SSR Kazajstán;RSS Kazaca;SSR Kazahsztán;SSR Kazachstán;SSR Kazahsztán;SSR Kazachstan;SSR Cazaquistão;ÑÑÐ Êàçàõñòàí;SSR Kazakstan;
