--- a/GFM/localisation/text.csv
+++ b/GFM/localisation/text.csv
@@ -10701,7 +10701,7 @@ PROV2602;Roebourne;Roebourne;Roebourne;;Roebourne;;;;;;;;;
 PROV2604;Normanton;Normanton;Normanton;;Normanton;;;;;;;;;
 PROV2608;Khatgal;Khatgal;Khatgal;;Khatgal;;;;;;;;;
 PROV2610;Uralsk;Uralsk;Uralsk;;Uralsk;;;;;;;;;
-PROV2611;Kostanay;Turgay;Turgay;;Turgay;;;;;;;;;
+PROV2611;Nikolaevsk;Turgay;Turgay;;Turgay;;;;;;;;;
 PROV2612;Aktash;Aktash;Aktash;;Aktash;;;;;;;;;
 PROV2615;Krasnoselkup;Krasnoselkup;Krasnoselkup;;Krasnoselkup;;;;;;;;;
 PROV2616;Tilichiki;Tilichiki;Tilichiki;;Tilichiki;;;;;;;;;
