--- a/GFM/localisation/FlavourMod_wars.csv
+++ b/GFM/localisation/FlavourMod_wars.csv
@@ -270,7 +270,7 @@ AGRESSION_DEMOCRACY_WAR_NAME;$ORDER$$FIRST$ Restoration of $SECOND$ Democracy;;;
 NORMAL_WAR_CONQUEST_ANY_NAME_ENG_MUG;The Indian Rebellion;;;;;;;;;;;;;
 AGRESSION_WAR_CONQUEST_ANY_NAME_ENG_MUG;The Indian Rebellion;;;;;;;;;;;;;
 NORMAL_WAR_CONQUEST_ANY_NAME_RUS_KAZ;The Conquest of Kazakhstan;;;;;;;;;;;;;
-AGRESSION_WAR_CONQUEST_ANY_NAME_RUS_KAZ;The Conquest of Kazakhstan;;;;;;;;;;;;;
+AGRESSION_WAR_CONQUEST_ANY_NAME_RUS_KAZ;The Kenesary Rebellion;;;;;;;;;;;;;
 NORMAL_WAR_CONQUEST_ANY_NAME_TUR_GRE;The Greek War of Independence;;;;;;;;;;;;;
 AGRESSION_WAR_CONQUEST_ANY_NAME_TUR_GRE;The Greek War of Independence;;;;;;;;;;;;;
 NORMAL_CONQUEST_ANY_NAME_ENG_EIC;The East India Company Uprising;;;;;;;;;;;;;
