Autonomous Zionism (Jewish immigration to Palestine without independent state) + Return to Empire after Hong Xiuquan's Death

--- a/GFM/localisation/00_HPM_countries.csv
+++ b/GFM/localisation/00_HPM_countries.csv
@@ -1217,12 +1217,12 @@ JAP_constitutional_empire;The Empire of Japan;;;;;;;;;;;;;
 JAP_constitutional_empire_ADJ;Imperial Japanese;;;;;;;;;;;;;
 JAP_proletarian_dictatorship;The People's Republic of Japan;;;;;;;;;;;;;
 JAP_proletarian_dictatorship_ADJ;The People's Republic of Japan;;;;;;;;;;;;;
-JAP_prussian_constitutionalism;The Tokugawa Shogunate;;;;;;;;;;;;;
-JAP_prussian_constitutionalism_ADJ;Tokugawa;;;;;;;;;;;;;
+JAP_prussian_constitutionalism;The Shogunate of Japan;;;;;;;;;;;;;
+JAP_prussian_constitutionalism_ADJ;Japanese;;;;;;;;;;;;;
 JAP_absolute_monarchy;The Tokugawa Shogunate;;;;;;;;;;;;;
 JAP_absolute_monarchy_ADJ;Tokugawa;;;;;;;;;;;;;
-JAP_hms_government;The Tokugawa Shogunate;;;;;;;;;;;;;
-JAP_hms_government_ADJ;Tokugawa;;;;;;;;;;;;;
+JAP_hms_government;The Shogunate of Japan;;;;;;;;;;;;;
+JAP_hms_government_ADJ;Japanese;;;;;;;;;;;;
 JAP_reactionary;Handoutou;Faction Shogunate;Shogunate Faction;;;;;;;;;;;
 JAP_conservative;Rikken Teiseitou;Faction de la cour;Court Faction;;;;;;;;;;;
 JAP_conservative_2;Rikken Kaishintou;Faction impérialiste;Imperialist Faction;;;;;;;;;;;
@@ -2273,6 +2273,12 @@ TPG_proletarian_dictatorship;The Chinese People's Republic;;;;;;;;;;;;;
 TPG_fascist_dictatorship;The Heavenly Kingdom;;;;;;;;;;;;;
 TPG_presidential_dictatorship;The Heavenly Republic;;;;;;;;;;;;;
 TPG_ADJ;Taiping;;;;;;;;;;;;;
+TPG_absolute_empire;The Tian Empire;;;;;;;;;;;;;
+TPG_absolute_empire_ADJ;Tian;;;;;;;;;;;;;
+TPG_semi_constitutional_empire;The Tian Empire;;;;;;;;;;;;;
+TPG_semi_constitutional_empire_ADJ;Tian;;;;;;;;;;;;;
+TPG_constitutional_empire;The Tian Empire;;;;;;;;;;;;;
+TPG_constitutional_empire_ADJ;Tian;;;;;;;;;;;;;
 TPG_conservative;West King;;;;;;;;;;;;;
 TPG_liberal;Yi King;;;;;;;;;;;;;
 TPG_reactionary;East King;;;;;;;;;;;;;
