--- a/GFM/localisation/00_GFM_Terrains.csv
+++ b/GFM/localisation/00_GFM_Terrains.csv
@@ -1474,3 +1474,4 @@ waddeneilanden;Island;;;;;;;;;;;;;
 villa_cisneros;Coastal Desert;;;;;;;;;;;;;
 wuchale;Montane Grassland;;;;;;;;;;;;;
 yamagata;Forest Hills;;;;;;;;;;;;;
+holyhead;Montane Grassland;;;;;;;;;;;;;
