--- a/GFM/localisation/00_GFM_Terrains.csv
+++ b/GFM/localisation/00_GFM_Terrains.csv
@@ -1475,3 +1475,4 @@ villa_cisneros;Coastal Desert;;;;;;;;;;;;;
 wuchale;Montane Grassland;;;;;;;;;;;;;
 yamagata;Forest Hills;;;;;;;;;;;;;
 holyhead;Montane Grassland;;;;;;;;;;;;;
+sulgari;Grassland Hills;;;;;;;;;;;;;
