--- a/GFM/localisation/000_persia_map.csv
+++ b/GFM/localisation/000_persia_map.csv
@@ -218,7 +218,7 @@ PROV4132;Kilif;;;;;;;;;;;;;
 PROV4133;Taleqan;;;;;;;;;;;;;
 PROV4134;Shaikh Dara;;;;;;;;;;;;;
 PROV4135;Andijan;;;;;;;;;;;;;
-PROV4136;Namagan;;;;;;;;;;;;;
+PROV4136;Namangan;;;;;;;;;;;;;
 PROV4137;Merke;;;;;;;;;;;;;
 PROV4138;Tamshybulak;;;;;;;;;;;;;
 PROV4139;Tsarkent;;;;;;;;;;;;;
