--- a/GFM/localisation/00_HPM_countries.csv
+++ b/GFM/localisation/00_HPM_countries.csv
@@ -94,6 +94,7 @@ CNG_prussian_constitutionalism;The Congo Free State;;;;;;;;;;;;;
 CNG_hms_government;The Congo Free State;;;;;;;;;;;;;
 CNG_presidential_dictatorship;Zaire;;;;;;;;;;;;;
 CNG_democracy;Republic of the Congo;;;;;;;;;;;;;
+CNG_democracy_ADJ;Congolese;;;;;;;;;;;;;
 CNG_liberal_2;Alliance of Bakongo;;;;;;;;;;;;;
 CNG_conservative_2;Congolese National Movement;;;;;;;;;;;;;
 CNG_socialist;African Solidarity Party;;;;;;;;;;;;;
