--- a/GFM/localisation/00_HPM_countries.csv
+++ b/GFM/localisation/00_HPM_countries.csv
@@ -3445,6 +3445,7 @@ HAZ_ADJ;Hazara;;;;;;;;;;;;;
 LUR;Luristan;;;;;;;;;;;;;
 LUR_ADJ;Luristani;;;;;;;;;;;;;
 KRA_republic;Free City of Krakow;;;;;;;;;;;;;
+KRA_proletarian_dictatorship;Krakow Commune;;;;;;;;;;;;;
 FLC;Fulani Caliphate;;;;;;;;;;;;;
 FLC_democracy;Fulani Republic;;;;;;;;;;;;;
 FLC_proletarian_dictatorship;Fulani Peoples Union;;;;;;;;;;;;;
