--- a/GFM/localisation/FlavourMod_modifiers.csv
+++ b/GFM/localisation/FlavourMod_modifiers.csv
@@ -60,7 +60,7 @@ federalism;Federalism;;;;;;;;;;;;;
 federalism_l;Federalism;;;;;;;;;;;;;
 federalism_desc;A federation is a political entity characterized by a union of partially self-governing states or regions under a central government. Sovereign power is formally divided between a central authority and a number of constituent regions so that each region retains some degree of control over its internal affairs.. What we lose in simplicity and efficiency, we gain in flexibility and adaptability.;;;;;;;;;;;;;
 movement_federalism;Federalist;;;;;;;;;;;;;
-confederalisml;Confederalism;;;;;;;;;;;;;
+confederalism_l;Confederalism;;;;;;;;;;;;;
 confederalism_desc;A confederation (also known as a confederacy or league) is a union of sovereign states, united for purposes of common action often in relation to other states. Since the member states of a confederation retain their sovereignty, they have an implicit right of secession, in contrast with a federal one, the central authority of a Confederation is relatively weak and makes for a slow and inefficient government.;;;;;;;;;;;;;
 regionalism_l;Regionalism;;;;;;;;;;;;;
 regionalism_desc;Regionalism occurs when a government has a weak central authority and parts of the country generally have strong levels of autonomy by the local leaders, while these regions do technically answer to the state, the level of control over these regions is usually limited and ineffective.;;;;;;;;;;;;;
