let's go, Kandahar panhandle

--- a/GFM/localisation/0000_IranRework.csv
+++ b/GFM/localisation/0000_IranRework.csv
@@ -176,7 +176,7 @@ PROV3531;Divrigi;;;;;;;;;;;;;
 PROV3530;Silvan;;;;;;;;;;;;;
 PROV3529;Sar-e Pol;;;;;;;;;;;;;
 PROV3528;Ghur;;;;;;;;;;;;;
-PROV3538;Quetta;;;;;;;;;;;;;
+PROV3538;Ziarat;;;;;;;;;;;;;
 PROV3390;Grozny;;;;;;;;;;;;;
 PROV1055;Shali;;;;;;;;;;;;;
 RUS_1102;Shirvan;;;;;;;;;;;;;
