Njelu why do you abandon me

--- a/GFM/localisation/00_HPM_countries.csv
+++ b/GFM/localisation/00_HPM_countries.csv
@@ -3837,8 +3837,8 @@ PCF_semi_constitutional_empire;The Marota Empire;;;;;;;;;;;;;
 PCF_semi_constitutional_empire_ADJ;Marota;;;;;;;;;;;;;
 HHE;Uhehe;;;;;;;;;;;;
 HHE_ADJ;Uhehe;;;;;;;;;;;;;
-BDN;Njelu;;;;;;;;;;;;
-BDN_ADJ;Gwangwara;;;;;;;;;;;;;
+BDN;Ujiji;;;;;;;;;;;;
+BDN_ADJ;Ujiji;;;;;;;;;;;;;
 GWR;Gwiriko;;;;;;;;;;;;
 GWR_ADJ;Gwiriko;;;;;;;;;;;;;
 ISQ;Isaaq;;;;;;;;;;;;
@@ -3867,8 +3867,8 @@ MZR_constitutional_empire;Mazrui;;;;;;;;;;;;;
 MZR_constitutional_empire_ADJ;Mazrui;;;;;;;;;;;;;
 MZR_semi_constitutional_empire;Mazrui;;;;;;;;;;;;;
 MZR_semi_constitutional_empire_ADJ;Mazrui;;;;;;;;;;;;;
-BKY;Ujiji;;;;;;;;;;;;;
-BKY_ADJ;Ujiji;;;;;;;;;;;;;
+BKY;Junior Horde;;;;;;;;;;;;;
+BKY_ADJ;Kazakh;;;;;;;;;;;;;
 BKY_absolute_empire;Bukey Horde;;;;;;;;;;;;;
 BKY_absolute_empire_ADJ;Kazakh;;;;;;;;;;;;;
 BKY_constitutional_empire;Bukey Horde;;;;;;;;;;;;;
