--- a/GFM/localisation/Islandwardescriptions.csv
+++ b/GFM/localisation/Islandwardescriptions.csv
@@ -28,6 +28,6 @@ SANTACATALINAISLANDS;.;;;;;;;;;;;;;
 SCILLYISLANDS;.;;;;;;;;;;;;;
 CHANNELISLANDS;.;;;;;;;;;;;;;
 ISLEOFMAN;.;;;;;;;;;;;;;
-SHETLANDISLANDS;.;;;;;;;;;;;;;
-ISLEOFWIGHT;.;;;;;;;;;;;;;
+SHETLANDISLANDS;About 170km northeast of Scotland there is an archipelago called the Shetland Islands. It has an oceanic climate, complex geology, rugged coastline, and many low, rolling hills. In all, the Shetlands are made up of about 300 islands and skerries, amounting to an area of nearly one thousand five hundred square kilometers, a thousand of which belong to the largest island, ironically named 'the Mainland'. The archipelago fell under Scottish rule in 1469, when it was ceded by the Kingdom of Norway. Shetlanders are known to have impressive nautical skill, as they have centuries of experience in fishing. Many have made a name for themselves by putting their expertise to use in the Royal Navy.;;;;;;;;;;;;;
+ISLEOFWIGHT;Separated from Hampshire by the Solent, a strait 4-8km in width, the Isle of Wight is England's largest island at nearly four hundred square kilometers. It has played an essential part in the defence of the ports of Southampton and Portsmouth and has been near the front line of conflicts through the ages, having faced the Spanish Armada. Though the island was last invaded by the French in 1545, the British government has built many fortifications on it over the centuries, hoping to defend against any possible future landings. The Isle of Wight is mostly rural, with most people employed in farming, fishing, or boat-building, although a small tourist sector has formed of late.;;;;;;;;;;;;;
 LONGISLAND;.;;;;;;;;;;;;;
