galapagos and navassa descs

--- a/GFM/localisation/Islandwardescriptions.csv
+++ b/GFM/localisation/Islandwardescriptions.csv
@@ -16,8 +16,8 @@ FERNANDOISLAND;A description will be added soon. Sorry!;;;;;;;;;;;;;
 TRINIDADEISLAND;A description will be added soon. Sorry!;;;;;;;;;;;;;
 CHILOEISLAND;A description will be added soon. Sorry!;;;;;;;;;;;;;
 EASTERISLAND;A description will be added soon. Sorry!;;;;;;;;;;;;;
-GALAPAGOSISLANDS;A description will be added soon. Sorry!;;;;;;;;;;;;;
-NAVASSAISLAND;A description will be added soon. Sorry!;;;;;;;;;;;;;
+GALAPAGOSISLANDS;The Galapagos Islands are a volcanic archipelago separated from the mainland of South America by 900km of the Eastern Pacific. In total, the group consists of 127 islands, rocks and islets that have a total area of just over eight thousand square kilometers. They were first discovered in 1535, when the bishop of Panama, Fray Tomás de Berlanga, was blown off course on the way to Peru. In the centuries thereafter, the arid and barren archipelago was left uninhabited, though pirates and whalers made use of it from time to time. With permanent settlement establishing itself in the 1830s, the islands have garnered increasing attention from naval powers, as they make for an excellent naval base that projects power both towards the isthmus of Panama and to the western coast of South America as a whole.;;;;;;;;;;;;;
+NAVASSAISLAND;Located 55km away from the westernmost point of Haiti's Tiburon Peninsula, Navassa Island is a small limestone islet little more than five square kilometers in size. Though it was discovered by Colombus' fourth voyage in 1504, Navassa was not settled until this century, as is it is too small and desolate to support a population. In recent years, however, the island has garnered increased attention, as it is known to be inhabited by large seabird colonies, which have produced large deposits of valuable guano, a highly effective fertilizer. The island is not of any strategic value, as it offers no ports or harbors, meaning that all ships must anchor offshore.;;;;;;;;;;;;;
 MASSAWAISLAND;A description will be added soon. Sorry!;;;;;;;;;;;;;
 BAYISLANDS;A description will be added soon. Sorry!;;;;;;;;;;;;;
 SANANDRESISLAND;A description will be added soon. Sorry!;;;;;;;;;;;;;
