--- a/GFM/localisation/Colonial_country_names.csv
+++ b/GFM/localisation/Colonial_country_names.csv
@@ -483,7 +483,7 @@ MLD_colonial_company_3;Maldivische Inseln;;;;;;;;;;;;;
 MLD_colonial_company_4;Morujibu-Shoto;;;;;;;;;;;;;
 ALB_absolute_empire;Pashalik of Scutari;;;;;;;;;;;;;
 ALB_semi_constitutional_empire;Pashalik of Scutari;;;;;;;;;;;;;
-ALB_absolute_monarchy;Pashalik of Scutari;;;;;;;;;;;;;
+ALB_constitutional_empire;Pashalik of Scutari;;;;;;;;;;;;;
 ALB_colonial_company;Albania;;;;;;;;;;;;;
 ALB_colonial_company_2;Albanie;;;;;;;;;;;;;
 ALB_colonial_company_3;Albanien;;;;;;;;;;;;;
