fixing peruvian civil wars

--- a/GFM/localisation/LocMergeFile.csv
+++ b/GFM/localisation/LocMergeFile.csv
@@ -1046,8 +1046,8 @@ RIG;Guyane;;;;;;;;;;;;;
 RIG_presidential_dictatorship;Republic of Counani;;;;;;;;;;;;;
 CHR;Chilean Revolt;;;;;;;;;;;;;
 PRR;Peruvian Revolt;;;;;;;;;;;;;
-PRR_prov_gov_conservative;Los Pierolistas;;;;;;;;;;;;;
-PRR_prov_gov_liberal;Los Constitucionales;;;;;;;;;;;;;
+PRR_prov_gov_conservative;Los Conservadores;;;;;;;;;;;;;
+PRR_prov_gov_liberal;Los Liberales;;;;;;;;;;;;;
 PRR_ADJ;Peruvian;;;;;;;;;;;;;
 CHR_absolute_monarchy;Chilean Royalists;;;;;;;;;;;;;
 CHR_hms_government;Chilean Revolt;;;;;;;;;;;;;
