fixing Mexico annexation

--- a/GFM/localisation/FlavourMod_wars.csv
+++ b/GFM/localisation/FlavourMod_wars.csv
@@ -239,6 +239,8 @@ NORMAL_WAR_TAKE_CORE_NAME_ALB_TUR;The Northern Albanian Revolt of 1837;;;;;;;;;;
 AGRESSION_WAR_TAKE_CORE_NAME_ALB_TUR;The Northern Albanian Revolt of 1837;;;;;;;;;;;;;
 NORMAL_WAR_RESTORE_ORDER_NAME_USA_CSA;The American Civil War;;;;;;;;;;;;;
 AGRESSION_WAR_RESTORE_ORDER_NAME_USA_CSA;The American Civil War;;;;;;;;;;;;;
+AGRESSION_CIVIL_WAR_NAME_USA_MEX;The Mexican Rebellion;;;;;;;;;;;;;;;
+NORMAL_CIVIL_WAR_NAME_USA_MEX;The Mexican Rebellion;;;;;;;;;;;;;
 NORMAL_WAR_CONQUEST_ANY_NAME_ENG_YEM;The Aden Expedition;;;;;;;;;;;;;
 AGRESSION_WAR_CONQUEST_ANY_NAME_ENG_YEM;The Aden Expedition;;;;;;;;;;;;;
 NORMAL_WAR_HUMILIATE_NAME_ENG_TPG;British Intervention in China;;;;;;;;;;;;;
