Final touches hopefully - Squashed

--- a/GFM/localisation/00_PDM_GAGA.csv
+++ b/GFM/localisation/00_PDM_GAGA.csv
@@ -950,7 +950,7 @@ steam_water_pumps_desc;Using boiling water to produce mechanical motion goes bac
 cornish_engine;Cornish Engine;;;;;;;;;;;;;
 cornish_engine_desc;A Cornish engine is a type of steam engine developed in Cornwall, England, mainly for pumping water from a mine. It is a form of beam engine that uses steam at a higher pressure than the earlier engines designed by James Watt. The engines were also used for powering man engines to assist the underground miners' journeys to and from their working levels, for winching materials into and out of the mine and for powering the ore stamping machinery.;;;;;;;;;;;;;
 form_USSA_title;Unite South America;;;;;;;;;;;;;
-form_USSA_desc;Now that we are in a dominant position in South America, the time has come to unite the continent under one banner. The USCA may have failed, but we have learned much from its demise - we will not make the same mistakes. Unite, oh brothers! Forward to glory!;;;;;;;;;;;;;
+form_USSA_desc;§RGain 10 infamy§! Now that we are in a dominant position in South America, the time has come to unite the continent under one banner. The USCA may have failed, but we have learned much from its demise - we will not make the same mistakes. Unite, oh brothers! Forward to glory!;;;;;;;;;;;;;
 EVTNAME555100;The Call for South American Union;;;;;;;;;;;;;
 EVTDESC555100;Now that one of the South American nations has become a Great Power, some people started wondering if it might be possible to create a union similiar to the United States of America. The idea seems preposterous today, but who knows what the future may hold for South America?;;;;;;;;;;;;;
 EVTOPTA555100;We will have to keep an eye on this;;;;;;;;;;;;;
