many small adjustments, some fixes

--- a/GFM/localisation/00_PDM_GAGA.csv
+++ b/GFM/localisation/00_PDM_GAGA.csv
@@ -1173,7 +1173,7 @@ wright_n_langleys_aeroplanes;Wright & Langley's Aeroplanes (+);;;;;;;;;;;;;
 advanced_battleships;Advanced Battleships (+);;;;;;;;;;;;;
 WILL_GET;[EFFECTS]:\n;;;;;;;;;;;;;
 POP_DOMINANT_IDEOLOGY_EFFECT;* Become 即$PERCENTAGE$劬 more 即$IDEOLOGY$劬.\n;;;;;;;;;;;;;
-POP_DOMINANT_ISSUE_EFFECT;* Become 即$PERCENTAGE$劬 more in favour of 即$ISSUE$劬.\n;;;;;;;;;;;;;
+POP_DOMINANT_ISSUE_EFFECT;* Become 即$PERCENTAGE$劬 more in favor of 即$ISSUE$劬.\n;;;;;;;;;;;;;
 INHERIT;* Inherit 即$WHO$劬.\n;;;;;;;;;;;;;
 RELATION_CHANGE_SHORT;* Relation with 即$PASSIVE$劬 changed by $MUCH$.\n;;;;;;;;;;;;;
 IDEOLOGY_ENABLED;* Enable 即$NAME$劬 in the world.\n;;;;;;;;;;;;;
