greenland can be purchased from anybody

--- a/GFM/localisation/0000Sitka.csv
+++ b/GFM/localisation/0000Sitka.csv
@@ -326,7 +326,7 @@ industrial_luxury_furniture_production_desc;We have discovered efficient process
 caribbean_rgo_normalization_title;Caribbean plantations;;;;;;;;;;;;;
 caribbean_rgo_normalization_desc;With new technology, plantations in the Caribbean are becoming more efficient.;;;;;;;;;;;;;
 greenland_purchase_title;The Greenland Purchase;;;;;;;;;;;;;
-greenland_purchase_desc;United States Secretary of State William H. Seward, who had negotiated the purchase of Alaska from the Russian Empire, consideres the idea of American annexation of Greenland and Iceland an idea worthy of serious consideration. Greenland's terrain and location make it very useful to us as a defensive outpost, yet to Denmark it is almost completely useless. An offer of 1 million dollars should surely convince them.;;;;;;;;;;;;;
+greenland_purchase_desc;United States Secretary of State William H. Seward, who had negotiated the purchase of Alaska from the Russian Empire, considers the idea of American annexation of Greenland and Iceland an idea worthy of serious consideration. Greenland's terrain and location make it very useful to us as a defensive outpost, yet to its current proprietors it is almost completely useless. An offer of 1 million dollars should surely convince them.;;;;;;;;;;;;;
 take_entenschnabel_title;The Entenschnabel;;;;;;;;;;;;;
 take_entenschnabel_desc;With our control over the interior of Kamerun secured, we can take more land to the North, which due to its peculiar shape will be known as the 'Entenschnabel' or 'duck's bill';;;;;;;;;;;;;
 take_kamerun_interior_title;The Kamerun interior;;;;;;;;;;;;;
